# AgentDecode

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml  sdk-publish.yml
agentdecode/: .env.local.example  .vercelignore  README.md  eslint.config.mjs  get_ids.mjs  get_link.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  reset_pass.mjs  tailwind.config.ts  test-e2e.mjs  test-ingest.js  test_query.ts  test_query2.ts  test_sdk.ts  test_sdk_advanced.ts  tsconfig.json  vitest.config.ts
agentdecode-python-sdk/: .gitignore  LICENSE  README.md  manual_test.py  pyproject.toml
agentdecode-python-sdk/agentdecode/: __init__.py  tracer.py
agentdecode-python-sdk/tests/: test_tracer.py
agentdecode-sdk/: README.md  setup.py  test_sdk.py
agentdecode-sdk/agentdecode/: __init__.py  tracer.py
agentdecode-sdk/demos/: demo1_support_agent.py  demo2_rag_agent.py  demo3_code_review_agent.py
agentdecode/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
agentdecode/app/: error.tsx  globals.css  landing.css  layout.tsx  not-found.tsx  page.tsx
agentdecode/components/: CommandPalette.tsx
agentdecode/e2e/: auth.spec.ts  landing.spec.ts  onboarding.spec.ts
agentdecode/lib/: alerts.ts  env.ts  featureFlags.ts  gemini.ts  groq.ts  logger.ts  openapi-spec.ts  rate-limit.ts  resend.ts  utils.ts  validation.ts
agentdecode/playwright-report/: index.html
agentdecode/scripts/: analyze-bundle.mjs  cleanup_fake_data.ts  create_api_key.mjs  seed_demo_data.ts
agentdecode/types/: index.ts
(+83 files in other folders)
